Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-107166

QQuickWidget causes crash when combined with dock and toolbar

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.4.1, 6.5.0 Beta1
    • 6.4.0
    • Quick: Widget
    • None
    • macOS
    • 2d381001da (qt/qtbase/dev) 2d381001da (qt/tqtc-qtbase/dev) 9778edbd6b (qt/qtbase/6.4) 9778edbd6b (qt/tqtc-qtbase/6.4)

    Description

      The attached simplified example adds a QWidget containing a QQuickWidget into a layout dynamically when the "Crash" toolbar button is pressed.  Crash occurs in the following stack:

      Thread 0 Crashed::  Dispatch queue: com.apple.main-threadThread 0 Crashed::  Dispatch queue: com.apple.main-thread0   QtWidgets                             0x1048ae6a4 void QWidgetRepaintManager::markDirty<QRegion>(QRegion const&, QWidget*, QWidgetRepaintManager::UpdateTime, QWidgetRepaintManager::BufferState) + 1108 (qwidgetrepaintmanager.cpp:219)1   QtWidgets                             0x1048ae530 void QWidgetRepaintManager::markDirty<QRegion>(QRegion const&, QWidget*, QWidgetRepaintManager::UpdateTime, QWidgetRepaintManager::BufferState) + 736 (qwidgetrepaintmanager.cpp:188)2   QtWidgets                             0x1048afe00 void QWidgetPrivate::invalidateBackingStore<QRegion>(QRegion const&) + 336 (qwidgetrepaintmanager.cpp:143)3   QtWidgets                             0x1048a0c0c QWidget::raise() + 488 (qwidget.cpp:11731)4   QtWidgets                             0x10499067c QDockAreaLayout::updateSeparatorWidgets() const + 116 (qdockarealayout.cpp:3280)5   QtWidgets                             0x1049c59e0 QMainWindowLayoutState::apply(bool) + 24 (qmainwindowlayout.cpp:679) [inlined]6   QtWidgets                             0x1049c59e0 QMainWindowLayout::applyState(QMainWindowLayoutState&, bool) + 1716 (qmainwindowlayout.cpp:2934)7   QtWidgets                             0x1049c52f8 QMainWindowLayout::setGeometry(QRect const&) + 556 (qmainwindowlayout.cpp:2048)8   QtWidgets                             0x104884d48 QLayoutPrivate::doResize() + 164 (qlayout.cpp:507)9   QtWidgets                             0x1048851bc QLayout::activate() + 756 (qlayout.cpp:1055)10  QtWidgets                             0x1048a12c8 QWidgetPrivate::setVisible(bool) + 568 (qwidget.cpp:8238)11  QtWidgets                             0x104922260 QFocusFramePrivate::update() + 168 (qfocusframe.cpp:41)12  libqmacstyle.dylib                    0x10360ac1c QMacStyle::event(QEvent*) + 57213  QtWidgets                             0x104857e50 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 272 (qapplication.cpp:3313)14  QtWidgets                             0x104858eb8 QApplication::notify(QObject*, QEvent*) + 512 (qapplication.cpp:3264)15  QtCore                                0x105942f90 QCoreApplication::notifyInternal2(QObject*, QEvent*) + 208 (qcoreapplication.cpp:1026)16  QtWidgets                             0x104856104 QApplicationPrivate::setFocusWidget(QWidget*, Qt::FocusReason) + 432 (qapplication.cpp:1510)17  QtWidgets                             0x10489d630 QWidget::setFocus(Qt::FocusReason) + 604 (qwidget.cpp:6517)18  QtWidgets                             0x104856f14 QApplication::setActiveWindow(QWidget*) + 99219  QtWidgets                             0x104857314 QApplicationPrivate::notifyActiveWindowChange(QWindow*) + 52 (qapplication.cpp:1895)20  QtGui                                 0x103d0cfa8 QGuiApplicationPrivate::processActivatedEvent(QWindowSystemInterfacePrivate::ActivatedWindowEvent*) + 620 (qguiapplication.cpp:2487)21  QtGui                                 0x103d61bc8 bool QWindowSystemHelper<QWindowSystemInterface::SynchronousDelivery>::handleEvent<QWindowSystemInterfacePrivate::ActivatedWindowEvent, QWindow*, Qt::FocusReason>(QWindow*, Qt::FocusReason) + 168 (qwindowsysteminterface.cpp:101)
      

      Attachments

        1. example.tar.gz
          2 kB
          Dave Wilcoxson
        2. Qt Creator-2022-10-11-093320.ips
          66 kB
          Marcus Tillmanns
        For Gerrit Dashboard: QTBUG-107166
        # Subject Branch Project Status CR V

        Activity

          People

            lagocs Laszlo Agocs
            davewilcoxson Dave Wilcoxson
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes